cloning from https://code.google.com/p/teaching-kids-programming/

--- a/social-drawing/drawing.html
+++ b/social-drawing/drawing.html
@@ -177,20 +177,20 @@ input {
     
       <div id="pensize-div" class="input">
         <form onSubmit='return false;'>
-﻿  <span class='label' id='pen'>pen</span>
+	<span class='label' id='pen'>pen</span>
         <input value="200" size=4 type="text" id="pensize" />
           </form>
       </div>
       <div id="fade-div" class="input">
         <form onSubmit='return false;'>
-﻿  <span class='label' id='fadealpha-lable'>transparent</span>
+	<span class='label' id='fadealpha-lable'>transparent</span>
           <input value=".25" size=4 type="text" id="fadealpha" />
           </form>
       </div>
 
       <div id="fade-div" class="checkbox">
         <form onSubmit='return false;'>
-﻿  <span class='label' id='fadealpha-lable'>Auto</span>
+	<span class='label' id='fadealpha-lable'>Auto</span>
           <input checked="CHECKED" type="checkbox" id="autofade" />
           </form>
       </div>
